# cmake-templates

autogen_assets/: CMakeLists.txt  README-EN.md  README.md
autogen_assets/cmake/: autogen_assets.cmake
autogen_assets/example/: main.cpp
autogen_assets/example/assets/: hello.txt
date_exercise/: .editorconfig  .gitignore  CMakeLists.txt
date_exercise/app/: CMakeLists.txt  main.cpp
date_exercise/src/: Date.cpp  Date.h
date_exercise/test/: CMakeLists.txt  test_date.cpp
hello_world/: CMakeLists.txt
hello_world/include/: hello.hpp
hello_world/src/: hello.cpp  main.cpp
hello_world/tests/: CMakeLists.txt  test_hello.cpp
